# rust_cron_bot

./: .gitignore  Cargo.toml
migrations/2021-09-26-141108_create_cron_entries/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
